#309 fix broken layout (& move to using Ids rather than classes for all addressable elements)

--- a/elan/web-editor/ide.css
+++ b/elan/web-editor/ide.css
@@ -20,34 +20,33 @@ body {
     padding: 15px;
     margin: 0;
   }
-  .code-title, .console-title, .evaluator-title {
+  #code-title, #console-title {
     background-color: var(--ideDefaultBackground);
     color: var(--ideReverseText);
     font-family: var(--ideTitleFont);
     font-size: 12pt;
   }
-  .code-title, .console-title {
+  #code-title, #console-title {
     grid-row: 1;
   }
-  .code-title, .elan-code{
+  #code-title, #elan-code{
     grid-column: 1 / 24;
 }
-  .console-title, .console {
+  #console-title, #console {
     grid-column: 25 / 48;
   }
-  .elan-code, .console {
+  #elan-code, #console {
     grid-row: 2/34;
     padding: 2px;
   }
- .code-controls, .console-controls {
+ #code-controls, #console-controls {
     grid-row: 34;
     background-color: var(--ideDefaultBackground);
   }
-  .code-controls {
+  #code-controls {
     grid-column: 1/24;
   }
-
-  .console-controls {
+  #console-controls {
     grid-column: 25/48;
   }
 
